[build-system]
requires = ["setuptools>=75.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awsinfra4databricks"
version = "0.0.1"
description = "A package that helps you create CloudFormation scripts that build the cloud infrastructure on AWS for deploying Databricks"
authors = [{ name = "Ioannis Papadopoulos", email = "ioannis.papadopoulos@databricks.com" }]
readme = "README.md"
license = { text = "MIT License" }
dependencies = [
    "boto3>=1.35.81",
    "botocore>=1.35.81",
    "ruamel.yaml>=0.18.10"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]